@@ -1,3 +1,0 @@
-function y = get_webapi_url();
-
-y = 'http://webapi:5000';
